    was wrong, AFAIK.

  - An important problem in DEFSTRUCT has been solved: when :CONC-NAME
    is NIL, it may happen that a second definition of a function
    overwrites the reader of a slot. For instance
        (defstruct (foo (:conc-name nil)) slot-a)
    followed by
        (defstruct (faa (:include foo) (:conc-name nil)))
    would produce an accessor SLOT-A which only works for structures
    of type FAA:
        (SLOT-A (MAKE-FAA)) => NIL
        (SLOT-A (MAKE-FOO)) => Error

  - The set of valid keyword arguments for a method depends on the
    applicable methods for each specific call. Thus, the associated
    LAMBDA forms need not check the consistency of arguments
    themselves, and may be declared with &allow-other-keys. With the
    new code, this is valid:
	(defmethod foo (&key b) ...)
	(defmethod foo :after (&key x) ...)
    but an invalid call (FOO :C 2) is undetected.

  - All streams have from now on element type (UNSIGNED-BYTE 8).
    READ-CHAR and WRITE-CHAR work on any stream, though, as do
    READ-BYTE and WRITE-BYTE.

  - READ/WRITE-SEQUENCE implemented.


TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.

* Remove most property lists from standard symbols.

* Make the version with Boehm's GC and the version without it binary
  compatible.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:70 ***
;;; End: ***