@@ -1276,6 +1276,7 @@ cl_symbols[] = {
 {KEY_ "EXECUTE", KEYWORD, NULL, -1},
 {KEY_ "EXPECTED-TYPE", KEYWORD, NULL, -1},
 {KEY_ "EXTERNAL", KEYWORD, NULL, -1},
+{KEY_ "EXTERNAL-FORMAT", KEYWORD, NULL, -1},
 {KEY_ "FORMAT-ARGUMENTS", KEYWORD, NULL, -1},
 {KEY_ "FORMAT-CONTROL", KEYWORD, NULL, -1},
 {KEY_ "FUNCTION", KEYWORD, NULL, -1},
